class Artist {
  constructor(name) {
    this.name = name
    this.tracks = []
    // this.spotifyId - define
  }
}

module.exports = Artist
